# pyro-sys-setup

./: .env.dist  .gitignore  .yamllint  CONTRIBUTING.md  README.md  REOLINK_APP_STEPS.md  RPI_INSTALLATION.md  RpiSETUP.md  add_ssh_key_playbook.yml  ansible.cfg  camera.rpi.requirements.txt  cameras_config.json  config.sh  hosts.yml  main.rpi.requirements.txt  master.yml  requirements.txt  requirements.yml  rpi.requirements.txt  setup_reolink_cameras.py  setup_rpi.sh  site.yml
.github/workflows/: yamllint.yml
cam_calibration/: README.md  app.py  calibration_app.py  cam_calibration.py  compute_panorama.py  estimate_azimuth.py  get_images_calibration.py  pyproject.toml  requirements.txt  setup_default_poses.py
cam_calibration/pages/: 1_Capture.py  2_Calibration.py  3_Pose_Selection.py
files/ansible_on_main_rpi/: README.md  ansible.cfg  (+3 more)
host_vars/: hosts.yml  hosts_with_camera.yml  hosts_with_password.yml
playbooks/: add_jobs_crontab.yml  add_ssh_key_playbook.yml  common_playbook.yml  deactivate_password_playbook.yml  enable_camera_playbook.yml  install_ansible_rpi_main.yml  install_local_api_dependencies.yml  install_openvpn_client.yml  install_pyroengine.yml  install_vision_dependencies.yml  run_scripts_camera_playbook.yml  run_scripts_main_rpi.yml  set_hostname_playbook.yml  setup_node_exporter_rpi.yml  setup_reverse_proxy_rpi_main.yml  stop_service_playbook.yml
scripts/: take_picture.py
scripts_camera_rpi/: take_picture.py
scripts_common/: monitor_pi.py
templates/: buffer.conf.j2  nginx.conf.j2  node_exporter.service.j2  vars.yml.j2
vars/: main.yml.dist
(+18 files in other folders)
